--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <!--Stylesheet-->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <base href="/" />
 </head>
 <body>
 <!--Container for React rendering-->
